--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -2,37 +2,59 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-div {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.user-div {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.follower-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 2%;
+  border-radius: 25px;
+  border: 2px solid black;
+  width: 50%;
+  background-color: aquamarine;
+}
+
+.follower-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 2%;
+  border-radius: 25px;
+  border: 2px solid black;
+  width: 30%;
+  background-color: aquamarine;
+}
+
+img {
+  height: 150px;
+  width: 150px;
+}
+
+.img-div {
+  margin: 2%;
+}
+
+#userImg {
+  height: 300px;
+  width: 300px
+}
+
+.card-text {
+  margin: 0 auto;
+  height: 50%;
 }
